--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Greetings from Valorem Advisors!!!<br>
       We are pleased to invite you to a CXO meet with the key management of Ajmera Realty &amp; Infra India Ltd., to be held over Zoom Webinar on Tuesday, 10th September 2024 at 4:00 PM IST.<br>
       <br> 
-      <a href="https://varun-k-meshram.github.io/website/" rel="noreferrer noreferrer" target="_blank" > <p style="text-align: center;"> View this email in your browser
+      <a href="https://varun-k-meshram.github.io/cxo-meet-2/" rel="noreferrer noreferrer" target="_blank" > <p style="text-align: center;"> View this email in your browser
         <br>
         <br>
       </p></a></h4></td>
